@@ -75,6 +75,7 @@
 /* --------------------------------------------------------------- */
 
 #define FN_DEFAULT_PIXELSIZE     2
+#define FN_DEFAULT_FULLSCREEN    0
 
 /* --------------------------------------------------------------- */
 
